--- a/actions_test/.github/workflows/test_github_actions.yaml
+++ b/actions_test/.github/workflows/test_github_actions.yaml
@@ -12,13 +12,9 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x' # Specify the Python version you need
+          python-version: '3.7' 
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt # If you have dependencies listed in a requirements file
-
+      
       - name: Run changes.py
-        run: python changes.py
+        run: python test.py
 
