--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   
   push:
-    branches: [ "main" ]
+    branches: [ "templates" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "templates" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
