--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -33,15 +33,23 @@ jobs:
       - name: Install dependencies
         working-directory: ./Pipeline/Intrusion/Production
         run: pip install -r main_requirements.txt
-      
+
+      - name: Check condition
+        working-directory: ./Pipeline/Intrusion/Production
+        run: python check_condition.py
+
       - name: Run read
-        working-directory: ./Pipeline/Intrusion/Experiment/templates
+        working-directory: ./Pipeline/Intrusion/Production
         run: python read_file.py
 
-      # Run the second Python script
+      
       - name: Run train
-        working-directory: ./Pipeline/Intrusion/Experiment/templates
+        working-directory: ./Pipeline/Intrusion/Production 
         run: python train_op.py
+
+      - name: Run eval
+        working-directory: ./Pipeline/Intrusion/Production 
+        run: python model_eval_deploy.py
 
       - name: Install dependencies
         working-directory: ./Pipeline/Intrusion/Production
@@ -50,16 +58,14 @@ jobs:
 
       - name: Run compile
         working-directory: ./Pipeline/Intrusion/Production
+        env:
+          KUBEFLOW_USERNAME: ${{ secrets.USER }}
+          KUBEFLOW_PASSWORD: ${{ secrets.PASSWORD }}
         run: python compile.py
 
-      - name: Upload output.yaml
+      - name: Upload output.yaml I can remove this 
         uses: actions/upload-artifact@v2
         with:
           name: generate output
           path: /home/runner/work/internproject/internproject/Pipeline/Intrusion/Production/intrusion_pipeline.yaml
-      - name: Upload and run pipeline on Kubeflow
-        working-directory: ./actions_test
-        env:
-          KUBEFLOW_USERNAME: ${{ secrets.USER }}
-          KUBEFLOW_PASSWORD: ${{ secrets.PASSWORD }}
-        run: python connect_kf.py 
+      
